# mav_trajectory_generation

./: README.md  rvizConfig.rviz
mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation/include/mav_trajectory_generation/: segment.h  trajectory.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h
mav_trajectory_generation/src/: segment.cpp  trajectory.cpp
mav_trajectory_generation_ros/: CMakeLists.txt  package.xml
mav_trajectory_generation_ros/include/mav_trajectory_generation_ros/: ros_conversions.h  ros_visualization.h  structs.h  trajectory_sampling.h
mav_trajectory_generation_ros/msg/: PVAJS.msg  PVAJS_array.msg
mav_trajectory_generation_ros/src/: minSnapClient.cpp  minSnapNode.cpp  ros_conversions.cpp  ros_visualization.cpp  structs.cpp  trajectory_sampler_node.cpp  trajectory_sampling.cpp
mav_trajectory_generation_ros/src/HelperFunctions/: helper.cpp  helper.h
mav_trajectory_generation_ros/src/minSnapFunctions/: minSnapFcns.cpp  minSnapFcns.h
mav_trajectory_generation_ros/srv/: minSnapStamped.srv
mav_visualization/include/mav_visualization/: helpers.h
